## $Id$

include $(top_srcdir)/Makefile.am.global

SUBDIRS = ADbg tinyxml

EXTRA_DIST = \
	ACM.cpp \
	ACM.dsw \
	ACM.h \
	ACMStream.cpp \
	ACMStream.h \
	AEncodeProperties.cpp \
	AEncodeProperties.h \
	DecodeStream.cpp \
	DecodeStream.h \
	LameACM.inf \
	TODO \
	acm.rc \
	adebug.h \
	lame.ico \
	lameACM.def \
	lameACM.dsp \
	lame_acm.xml \
	main.cpp \
	readme.txt \
	resource.h

