## $Id$

include $(top_srcdir)/Makefile.am.global

EXTRA_DIST = BladeMP3EncDLL.c \
	BladeMP3EncDLL.def \
	BladeMP3EncDLL.h \
	Example.cpp \
	Example.dsp \
	Example.dsw \
	Example_vc6.dsp \
	Example_vc6.dsw \
	LameDLLInterface.htm \
	LameDll_vc6.dsp \
	MP3EncDll.dsp \
	MP3EncDll.dsw \
	MP3export.pas \
	Makefile.mingw32
