## $Id$

include $(top_srcdir)/Makefile.am.global

EXTRA_DIST = \
	Encoder.cpp \
	Encoder.h \
	Mpegac.cpp \
	Mpegac.def \
	Mpegac.h \
	PropPage.cpp \
	PropPage.h \
	PropPage_adv.cpp \
	PropPage_adv.h \
	Property.rc \
	README \
	REG.CPP \
	REG.H \
	UIDS.H \
	aboutprp.cpp \
	aboutprp.h \
	elogo.ico \
	iaudioprops.h \
	resource.h

