## $Id$

include $(top_srcdir)/Makefile.am.global

EXTRA_PROGRAMS = abx ath scalartest

CLEANFILES = $(EXTRA_PROGRAMS)

EXTRA_SCRIPTS = \
	auenc \
	mugeco.sh \
	mlame

EXTRA_DIST = \
	Lame.vbs \
	lame4dos.bat \
	mlame_corr.c

abx_SOURCES = abx.c

ath_SOURCES = ath.c

scalartest_SOURCES = scalartest.c

