## $Id$

include $(top_srcdir)/Makefile.am.global

EXTRA_DIST = \
	vc9_lame.sln \
	vc9_lame_acm.vcproj \
	vc9_lame_acm_adbg.vcproj \
	vc9_lame_acm_tinyxml.vcproj \
	vc9_lame_clients.sln \
	vc9_lame_dll.vcproj \
	vc9_lame_dll_example.vcproj \
	vc9_lame_dshow.vcproj \
	vc9_lame_lame.vcproj \
	vc9_lame_mp3x.vcproj \
	vc9_libmp3lame.vcproj \
	vc9_libmp3lame_dll.vcproj \
	vc9_mpglib.vcproj \
	vc9_nasm.rules
