## $Id$

include $(top_srcdir)/Makefile.am.global

EXTRA_DIST = \
	Makefile.tinyxml \
	changes.txt \
	dox \
	makedistlinux \
	makedistwin.bat \
	readme.txt \
	test.dsp \
	test.dsw \
	tinyxml.cpp \
	tinyxml.dsp \
	tinyxml_vc7.vcproj \
	tinyxml.h \
	tinyxmlerror.cpp \
	tinyxmlparser.cpp \
	xmltest.cpp
