## $Id$

AUTOMAKE_OPTIONS = foreign ansi2knr

docdir = $(datadir)/doc
pkgdocdir = $(docdir)/$(PACKAGE)
htmldir = $(docdir)/html
pkghtmldir = $(pkgdocdir)/html

pkghtml_DATA = \
    about.html \
	abr.html \
	cbr.html \
	contact.html \
	contributors.html \
	detailed.html \
	history.html \
	index.html \
	introduction.html \
	links.html \
	list.html \
	ms_stereo.html \
	usage.html \
	vbr.html

EXTRA_DIST = $(pkghtml_DATA)

